--- a/web/App.config
+++ b/web/App.config
@@ -23,7 +23,7 @@
                 <value>30000</value>
             </setting>
             <setting name="CS" serializeAs="String">
-                <value>Srvr="srvnew";Ref="utrus_beckup";Usr="Admin";Pwd="9780100941";</value>
+                <value>Srvr="srvnew";Ref="utrus";Usr="Admin";Pwd="9780100941";</value>
             </setting>
         </web.Properties.Settings>
     </userSettings>
